--- a/WebSite/WebSite.csproj
+++ b/WebSite/WebSite.csproj
@@ -6,18 +6,9 @@
 
   <PropertyGroup>
     <PackageTargetFallback>$(PackageTargetFallback);portable-net45+win8+wp8+wpa81;</PackageTargetFallback>
+    <UserSecretsId>1c8f1c63-cb7b-42f4-ab88-ef5b62c198e0</UserSecretsId>
   </PropertyGroup>
-
   <ItemGroup>
-    <Content Include="wwwroot\chame.json" />
-    <Content Include="wwwroot\css\StyleSheet1.css" />
-    <Content Include="wwwroot\css\StyleSheet2.css" />
-    <Content Include="wwwroot\js\JavaScript1.js" />
-    <Content Include="wwwroot\js\JavaScript2.js" />
-    <Content Include="wwwroot\Properties\launchSettings.json" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.0.0" />
     <PackageReference Include="Microsoft.AspNetCore" Version="1.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="1.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="1.1.1" />
