--- a/WebSite/WebSite.csproj
+++ b/WebSite/WebSite.csproj
@@ -21,7 +21,13 @@
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="1.0.0" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Chame.FileSystem\Chame.FileSystem.csproj" />
     <ProjectReference Include="..\Chame\Chame.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Update="Properties\launchSettings.json">
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
