--- a/WebSite/Properties/launchSettings.json
+++ b/WebSite/Properties/launchSettings.json
@@ -1,9 +1,9 @@
-{
+﻿{
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:49915/",
+      "applicationUrl": "http://localhost:55298/",
       "sslPort": 0
     }
   },
@@ -16,7 +16,12 @@
       }
     },
     "WebSite": {
-      "commandName": "Project"
+      "commandName": "Project",
+      "launchBrowser": true,
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      },
+      "applicationUrl": "http://localhost:55299"
     }
   }
 }
