--- a/WebSite/WebSite.csproj
+++ b/WebSite/WebSite.csproj
@@ -11,7 +11,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Include="ClientApp\less\vendor.less" />
+    <Content Include="ClientApp\less\bootstrap.less" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore" Version="2.0.0" />
