--- a/WebSite/Properties/launchSettings.json
+++ b/WebSite/Properties/launchSettings.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
@@ -18,6 +18,7 @@
     "WebSite": {
       "commandName": "Project",
       "launchBrowser": true,
+      "launchUrl": "demo",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
