--- a/WebSite/WebSite.csproj
+++ b/WebSite/WebSite.csproj
@@ -27,7 +27,8 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Chame\Chame.csproj" />
-    <ProjectReference Include="..\WebSite.Views\WebSite.Views.csproj" />
+    <ProjectReference Include="..\WebSite.Themes.A\WebSite.Themes.A.csproj" />
+    <ProjectReference Include="..\WebSite.Themes.B\WebSite.Themes.B.csproj" />
   </ItemGroup>
   <ItemGroup>
     <Content Update="Properties\launchSettings.json">
