--- a/WebSite.Themes.A/WebSite.Themes.A.csproj
+++ b/WebSite.Themes.A/WebSite.Themes.A.csproj
@@ -10,4 +10,8 @@
     </EmbeddedResource>
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore" Version="2.0.0" />
+  </ItemGroup>
+
 </Project>
