--- a/ThemeA/ThemeA.csproj
+++ b/ThemeA/ThemeA.csproj
@@ -9,10 +9,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Remove="Views\Themes\A\DemoStatus.cshtml" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.1.1" />
     <PackageReference Include="Microsoft.AspNetCore" Version="2.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.0.0" />
@@ -26,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="Views\Themes\A\DemoStatus.cshtml" />
+    <EmbeddedResource Include="Views\Themes\A\DemoPartialView.cshtml" />
   </ItemGroup>
 
 </Project>
