--- a/WebSite.Themes.B/WebSite.Themes.B.csproj
+++ b/WebSite.Themes.B/WebSite.Themes.B.csproj
@@ -5,11 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="Views\Themes\B\DemoStatus.cshtml" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <EmbeddedResource Include="Views\Themes\B\DemoStatus.cshtml">
+    <EmbeddedResource Include="Views\Themes\B\DemoPartialView.cshtml">
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </EmbeddedResource>
   </ItemGroup>
