--- a/WebSite.Themes.A/WebSite.Themes.A.csproj
+++ b/WebSite.Themes.A/WebSite.Themes.A.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="Views\Themes\A\DemoStatus.cshtml">
+    <EmbeddedResource Include="Views\Themes\A\DemoPartialView.cshtml">
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </EmbeddedResource>
   </ItemGroup>
