--- a/WebSite/Properties/launchSettings.json
+++ b/WebSite/Properties/launchSettings.json
@@ -18,7 +18,7 @@
     "WebSite": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "demo",
+      "launchUrl": "demo1",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
