--- a/WebSite/WebSite.csproj
+++ b/WebSite/WebSite.csproj
@@ -26,9 +26,15 @@
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="1.0.0" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Views\Themes\A\DemoPartialView.cshtml">
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\Themes\B\DemoPartialView.cshtml">
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\Chame\Chame.csproj" />
-    <ProjectReference Include="..\WebSite.Themes.A\WebSite.Themes.A.csproj" />
-    <ProjectReference Include="..\WebSite.Themes.B\WebSite.Themes.B.csproj" />
   </ItemGroup>
   <ItemGroup>
     <Content Update="Properties\launchSettings.json">
