--- a/Demo/WebSite/WebSite.csproj
+++ b/Demo/WebSite/WebSite.csproj
@@ -34,7 +34,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Chame\Chame.csproj" />
+    <ProjectReference Include="..\..\Chame\Chame.csproj" />
   </ItemGroup>
   <ItemGroup>
     <Content Update="Properties\launchSettings.json">
