--- a/Demo/WebSiteX/Properties/launchSettings.json
+++ b/Demo/WebSiteX/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:50561/",
+      "applicationUrl": "http://localhost:55298/",
       "sslPort": 0
     }
   },
@@ -22,7 +22,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "http://localhost:50562/"
+      "applicationUrl": "http://localhost:55299"
     }
   }
 }
