--- a/Demo/WebSiteContent/WebSiteContent.csproj
+++ b/Demo/WebSiteContent/WebSiteContent.csproj
@@ -25,8 +25,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="Root\A\Views\DemoPartialView.cshtml" />
-    <None Include="Root\B\Views\DemoPartialView.cshtml" />
+    <None Include="Root\A\Views\Demo\Demo1\DemoPartialView.cshtml" />
+    <None Include="Root\B\Views\Demo\Demo1\DemoPartialView.cshtml" />
   </ItemGroup>
 
   <ItemGroup>
