--- a/Chame/Chame.csproj
+++ b/Chame/Chame.csproj
@@ -1,11 +1,8 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
-
-  <PropertyGroup Label="Configuration" Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <OutputType>Library</OutputType>
-  </PropertyGroup>
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
+    <OutputType>Library</OutputType>
     <AssemblyName>Chame</AssemblyName>
     <Authors>Ossi Vartiainen</Authors>
     <Company />
