--- a/Chame/Chame.csproj
+++ b/Chame/Chame.csproj
@@ -13,6 +13,7 @@
     <RepositoryUrl>https://github.com/ooaavee/Chame</RepositoryUrl>
     <Description>ASP.NET Core JavaScript, CSS and Razor view loader for multi-tenant and themeable applications.</Description>
     <Copyright>Copyright (c) 2017 Ossi Vartiainen</Copyright>
+    <Version>1.1.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
