--- a/Chame/Chame.csproj
+++ b/Chame/Chame.csproj
@@ -11,11 +11,11 @@
     <PackageLicenseUrl>https://github.com/ooaavee/Chame/blob/master/LICENSE</PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/ooaavee/Chame</PackageProjectUrl>
     <RepositoryUrl>https://github.com/ooaavee/Chame</RepositoryUrl>
-    <Description>ASP.NET Core JavaScript, CSS and Razor view loader for multi-tenant and themeable applications.</Description>
+    <Description>ASP.NET Core Razor view and content loader for multi-tenant and themeable applications</Description>
     <Copyright>Copyright (c) 2017 Ossi Vartiainen</Copyright>
-    <Version>1.2.0</Version>
-    <AssemblyVersion>1.2.0.0</AssemblyVersion>
-    <FileVersion>1.2.0.0</FileVersion>
+    <Version>1.3.0</Version>
+    <AssemblyVersion>1.3.0.0</AssemblyVersion>
+    <FileVersion>1.3.0.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
