--- a/Demo/WebSite/WebSite.csproj
+++ b/Demo/WebSite/WebSite.csproj
@@ -5,7 +5,22 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Themes\ChameContent\A\css\customization.css" />
+    <None Remove="Themes\ChameContent\A\js\customization.js" />
+    <None Remove="Themes\ChameContent\B\js\customization.js" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Content Include="ClientApp\less\bootstrap.less" />
+    <Content Include="Themes\ChameContent\A\css\customization.css">
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+    <Content Include="Themes\ChameContent\A\js\customization.js">
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+    <Content Include="Themes\ChameContent\B\js\customization.js">
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
   </ItemGroup>
 
   <ItemGroup>
@@ -18,6 +33,21 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Chame\Chame.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="Themes\ChameContent\A\Views\Demo\Demo1\DemoPartialView.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
+    <Content Update="Themes\ChameContent\A\Views\Shared\_Logo.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
+    <Content Update="Themes\ChameContent\B\Views\Demo\Demo1\DemoPartialView.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
+    <Content Update="Themes\ChameContent\B\Views\Shared\_Logo.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
   </ItemGroup>
 
 </Project>
